[package]
name = "context_bind"
version = "0.0.2"
authors = ["William Cody Laeder <codylaeder@gmail.com>"]
repository = "https://github.com/valarauca/context_bind.git"
homepage = "https://github.com/valarauca/context_bind"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://valarauca.github.io/context_bind/context_bind/index.html"
description = "Simple M:N threading library. Should support Linux, MacOS, Free/OpenBSD, and Windows for x86/64, and aarch32/64"
keywords = ["coroutine", "green_thread", "concurrency", "context"]

[dependencies]
context = "1.0"
